--- a/instagram.html
+++ b/instagram.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://www.instagram.com/static/images/ico/favicon.ico/36b3ee2d91ed.ico">
     <link rel="stylesheet" href="./libs/css/style.css">
     <title>Instagram</title>
 </head>
@@ -29,7 +30,7 @@
                 </p>
             </div>
             <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
+                <p class="get-app">Obtenha o aplicativo</p>
                 <div class="download">
                     <a href="" class="app-download"></a>
                     <a href="" class="app-download"></a>
