--- a/instagram.html
+++ b/instagram.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +8,69 @@
     <link rel="stylesheet" href="./libs/css/style.css">
     <title>Instagram</title>
 </head>
+
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="https://www.pngkey.com/png/detail/966-9669569_celular-capa-coach-social-capa-para-celular-instagram.png" alt="celular">
-        </div>
-        <div class="instagram-continue">
-            <div class="group">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png" alt="">
-                <div class="profile-photo">
-                    <img src="https://pbs.twimg.com/profile_images/1255696856538951680/mEqjg2Lz_400x400.jpg" alt="">
+    <div class="container">
+        <div class="instagram-wrapper">
+            <div class="instagram-phone">
+                <img src="https://www.instagram.com/static/images/homepage/phones/home-phones.png/1dc085cdb87d.png"
+                    alt="celular">
+            </div>
+            <div class="instagram-continue">
+                <div class="group">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+                        alt="">
+                    <div class="profile-photo">
+                        <img src="https://pbs.twimg.com/profile_images/1255696856538951680/mEqjg2Lz_400x400.jpg" alt="">
+                    </div>
+                    <a href="" class="instagram-login"> continue como h_business22</a>
+                    <a href="" class="instagram-logout">Remover conta</a>
                 </div>
-                <a href="" class="instagram-login"> continue como h_business22</a>
-                <a href="" class="instagram-logout">Remover conta</a>
-            </div>
-            <div class="group">
-                <p class="not-account">Não eh h_business22</p>
-                <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
-                </p>
-            </div>
-            <div class="get-the-app">
-                <p class="get-app">Obtenha o aplicativo</p>
-                <div class="download">
-                    <a href="" class="app-download"></a>
-                    <a href="" class="app-download"></a>
+                <div class="group">
+                    <p class="not-account">Não eh h_business22</p>
+                    <p class="not-account">
+                        <span class="link-blue">Alternar contas</span>
+                        ou
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-app">Obtenha o aplicativo</p>
+                    <div class="download">
+                        <a href="" class="app-download"></a>
+                        <a href="" class="app-download"></a>
+                    </div>
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="container-footer">
+                <div class="diversos">
+                    <li>
+                        <ul><a href="">Meta</a></ul>
+                        <ul><a href="">Sobre</a></ul>
+                        <ul><a href="">Blog</a></ul>
+                        <ul><a href="">Carreiras</a></ul>
+                        <ul><a href="">Ajuda</a></ul>
+                        <ul><a href="">API</a></ul>
+                        <ul><a href="">Privacidade</a></ul>
+                        <ul><a href="">Termos</a></ul>
+                        <ul><a href="">Principais contas</a></ul>
+                        <ul><a href="">Hashtags</a></ul>
+                        <ul><a href="">Localizações</a></ul>
+                        <ul><a href="">Instagram Lite</a></ul>
+                        <ul><a href="">Carregamento de contatos e não usuários</a></ul>
+                        <ul><a href="">Dança</a></ul>
+                        <ul><a href="">Comida e bebida</a></ul>
+                        <ul><a href="">Casa e jardim</a></ul>
+                        <ul><a href="">Música</a></ul>
+                        <ul><a href="">Artes Visuais</a></ul>
+                    </li>
+                </div>
+                <div class="idioma"><a href="">Português (Brasil) -- © 2022 Instagram from Meta</a></div>
+            </div>
+        </footer>
     </div>
 </body>
+
 </html>
