--- a/index.html
+++ b/index.html
@@ -46,26 +46,26 @@
         <footer>
             <div class="container-footer">
                 <div class="diversos">
-                    <li>
-                        <ul><a href="">Meta</a></ul>
-                        <ul><a href="">Sobre</a></ul>
-                        <ul><a href="">Blog</a></ul>
-                        <ul><a href="">Carreiras</a></ul>
-                        <ul><a href="">Ajuda</a></ul>
-                        <ul><a href="">API</a></ul>
-                        <ul><a href="">Privacidade</a></ul>
-                        <ul><a href="">Termos</a></ul>
-                        <ul><a href="">Principais contas</a></ul>
-                        <ul><a href="">Hashtags</a></ul>
-                        <ul><a href="">Localizações</a></ul>
-                        <ul><a href="">Instagram Lite</a></ul>
-                        <ul><a href="">Carregamento de contatos e não usuários</a></ul>
-                        <ul><a href="">Dança</a></ul>
-                        <ul><a href="">Comida e bebida</a></ul>
-                        <ul><a href="">Casa e jardim</a></ul>
-                        <ul><a href="">Música</a></ul>
-                        <ul><a href="">Artes Visuais</a></ul>
-                    </li>
+                    <ul>
+                        <li><a href="">Meta</a></li>
+                        <li><a href="">Sobre</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Carreiras</a></li>
+                        <li><a href="">Ajuda</a></li>
+                        <li><a href="">API</a></li>
+                        <li><a href="">Privacidade</a></li>
+                        <li><a href="">Hashtags</a></li>
+                        <li><a href="">Termos</a></li>
+                        <li><a href="">Instagram Lite</a></li>
+                        <li><a href="">Principais contas</a></li>
+                        <li><a href="">Dança</a></li>
+                        <li><a href="">Localizações</a></li>
+                        <li><a href="">Casa e jardim</a></li>
+                        <li><a href="">Carregamento de contatos e não usuários</a></li>
+                        <li><a href="">Artes Visuais</a></li>
+                        <li><a href="">Comida e bebida</a></li>
+                        <li><a href="">Música</a></li>
+                    </ul>
                 </div>
                 <div class="idioma"><a href="">Português (Brasil) -- © 2022 Instagram from Meta</a></div>
             </div>
